[tool.poetry]
name = "led-ble-hf"
version = "1.0.0"
description = "Control a wide range of LED BLE devices"
authors = ["Jon <jon@jlrsoftwarellc.com>"] # forked from https://github.com/Bluetooth-Devices/led-ble by J. Nick Koston <nick@koston.org>"

readme = "README.md"
repository = "https://github.com/jr4/led-ble"
documentation = "https://github.com/jr4/led-ble"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: Apache Software License",
]
packages = [
    { include = "led_ble_hf", from = "src" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/jr4/led-ble/issues"
"Changelog" = "https://github.com/jr4/led-ble/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.10"

# Documentation Dependencies
Sphinx = {version = "^5.0", optional = true}
sphinx-rtd-theme = {version = "^1.0", optional = true}
myst-parser = {version = "^0.18", optional = true}
bleak-retry-connector = ">=2.3.0"
bleak = ">=0.19.0"
async-timeout = {version = ">=3.0.0", python = "<3.11"}
flux-led = ">=0.28.32"

[tool.poetry.extras]
docs = [
    "myst-parser",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^3.0"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "src/led_ble_hf/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=led_ble_hf --cov-report=term-missing:skip-covered"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.isort]
profile = "black"
known_first_party = ["led_ble_hf", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/.*',
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
